<resources>
    <string name="app_name">MDM EVERIS</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="entrar">Entrar</string>
    <string name="password">Password</string>
    <string name="acerque_su_tarjeta_al_nfc">Acerque su tarjeta al NFC</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="bienvenido_a">Bienvenido/a: </string>
    <string name="login">Login</string>
    <string name="favoritos">Favoritos</string>
    <string name="reservar">RESERVAR</string>
    <string name="so">SO:</string>
    <string name="fecha_fin">Fin reserva:</string>
    <string name="m_vil">Dispositivo:</string>
    <string name="boton_like">Boton like</string>
    <string name="tama_o_pantalla">Tamaño:</string>
    <string name="email_everis">@everis.com</string>
    <string name="user">User</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="email_de_everis">Email de everis</string>
    <string name="perfil">Perfil</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="edit_bottom">EditBottom</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="your_data">TUS DATOS</string>
    <string name="email">Email: </string>
    <string name="your_profile">TU PERFIL</string>
    <string name="nombre">Nombre:</string>
    <string name="change_pwd">Cambiar contraseña</string>
    <string name="consultando_la_base_de_datos">Consultando la base de datos</string>
    <string name="caracter_sticas">Características</string>
    <string name="tipo_de_dispositivo">Tipo de dispositivo:</string>
    <string name="resoluci_n">Resolución:</string>
    <string name="ppi">PPI:</string>
    <string name="sim">SIM:</string>
    <string name="fecha_inicio_de_la_reserva">Fecha inicio de la reserva</string>
    <string name="fecha_fin_de_la_reserva">Fecha fin de la reserva</string>
    <string name="turno_de_ma_ana_09_00">Turno de mañana (09:00)</string>
    <string name="turno_de_tarde_15_00">Turno de tarde (15:00)</string>
    <string name="cancelar">Cancelar</string>
    <string name="android">ANDROID</string>
    <string name="ios">IOS</string>
    <string name="movil">Móvil</string>
    <string name="tablet">Tablet</string>
    <string name="reg_strate">REGÍSTRATE</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="reset_pwd">Restablecer contraseña</string>
    <string name="tv_reset_pwd_text">Correo de Everis para resetear la contraseña</string>
    <string name="email_text">Email</string>
    <string name="resetear">Resetear</string>
</resources>