<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.mdm_everis.reset_pwd.ResetPwdFragment">

    <TextView
        android:id="@+id/tv_reset_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/tv_reset_pwd_text"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_pwd"
        app:suffixText="@string/email_everis">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/ly_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_corner_button"
        android:text="@string/resetear"
        android:textColor="@color/colorWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>
