<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewLogin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="15dp"
    android:elevation="0dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:suffixText="@string/email_everis">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="junjieli"
                android:autofillHints="email"
                android:hint="@string/user"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/ly_email"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12345678"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/ly_pwd"
            app:layout_constraintStart_toStartOf="@id/ly_pwd"
            app:layout_constraintEnd_toEndOf="@id/ly_pwd"
            android:text="@string/entrar"
            android:background="@drawable/round_corner_button"
            android:textColor="@color/colorWhite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>