<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/reserve_process_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_inicio_de_la_reserva"
            android:inputType="text"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@id/ly_start_date"
        app:layout_constraintTop_toBottomOf="@id/ly_start_date"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/start_morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turno_de_ma_ana_09_00"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/start_afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turno_de_tarde_15_00"
            android:checked="false" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/rg_start"
        app:layout_constraintStart_toStartOf="@id/ly_start_date"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_fin_de_la_reserva"
            android:inputType="text"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@id/ly_end_date"
        app:layout_constraintTop_toBottomOf="@id/ly_end_date"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/end_morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turno_de_ma_ana_09_00"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/end_afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turno_de_tarde_15_00"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:layout_constraintTop_toBottomOf="@id/rg_end"
        app:layout_constraintStart_toStartOf="@id/ly_start_date"
        app:layout_constraintEnd_toEndOf="@id/ly_start_date"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:text="@string/reservar"
        android:textColor="@color/colorWhite"
        android:background="@drawable/round_corner_button"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>