<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    android:elevation="0dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_your_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/your_data"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_your_data"
            app:layout_constraintTop_toBottomOf="@id/tv_your_data"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="@id/tv_name"
            android:textSize="18sp"
            android:lines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_your_data"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_email_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/tv_email"
            app:layout_constraintTop_toTopOf="@id/tv_email"
            android:textSize="18sp"
            android:lines="1"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/btn_change_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            android:text="@string/change_pwd"
            android:background="@drawable/round_corner_button"
            android:textColor="@color/colorWhite" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>