<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.mdm_everis.device_details.DeviceDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1DeviceD"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2DeviceD"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <ImageView
        android:id="@+id/im_device"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl1DeviceD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_phone_android_black_24dp"/>

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/gl1DeviceD"
        app:layout_constraintBottom_toTopOf="@id/gl2DeviceD"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Nombre del dispositivo"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:lines="1"
        android:ellipsize="end"
        android:elevation="1dp" />

    <View
        android:id="@+id/viewBackColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/gl1DeviceD"
        app:layout_constraintBottom_toTopOf="@id/gl2DeviceD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorAccent"/>
    
    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_device_name"
        app:layout_constraintTop_toBottomOf="@id/gl2DeviceD"
        android:text="@string/caracter_sticas"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/typeDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="@string/tipo_de_dispositivo"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/typeDevice_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/typeDevice"
        app:layout_constraintStart_toEndOf="@id/typeDevice"
        android:text="Móvil"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/so"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/typeDevice"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="@string/so"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/so_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/so"
        app:layout_constraintStart_toEndOf="@id/so"
        android:text="sistema operativo"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/screenSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/so"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="@string/tama_o_pantalla"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/screenSize_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/screenSize"
        app:layout_constraintStart_toEndOf="@id/screenSize"
        android:text="10.1 inches"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/screenResolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/screenSize"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="@string/resoluci_n"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/screenResolution_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/screenResolution"
        app:layout_constraintStart_toEndOf="@id/screenResolution"
        android:text="1136 x 640 pixels"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/ppi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/screenResolution"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="@string/ppi"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ppi_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/ppi"
        app:layout_constraintStart_toEndOf="@id/ppi"
        android:text="329 ppi"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/sim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/ppi"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="@string/sim"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/sim_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/sim"
        app:layout_constraintStart_toEndOf="@id/sim"
        android:text="Sí"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/typeCharger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sim"
        app:layout_constraintStart_toStartOf="@id/info"
        android:text="Tipo cargador: "
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/typeCharger_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/typeCharger"
        app:layout_constraintStart_toEndOf="@id/typeCharger"
        android:text="lightning"
        android:textSize="18sp"
        android:lines="1"
        android:ellipsize="end"/>

    <Button
        android:id="@+id/btn_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/typeCharger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/reservar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
