<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_inicio_de_la_reserva"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/f_start_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ly_start_date"
        app:layout_constraintStart_toStartOf="@id/ly_start_date"
        app:layout_constraintEnd_toEndOf="@id/ly_start_date"
        android:visibility="gone">
        <include layout="@layout/time_frame"/>
    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/f_start_hour"
        app:layout_constraintStart_toStartOf="@id/ly_start_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_fin_de_la_reserva"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/f_end_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ly_end_date"
        app:layout_constraintStart_toStartOf="@id/ly_end_date"
        app:layout_constraintEnd_toEndOf="@id/ly_end_date"
        android:visibility="gone">
        <include layout="@layout/time_frame"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/f_end_hour"
        app:layout_constraintStart_toStartOf="@id/ly_start_date"
        app:layout_constraintEnd_toEndOf="@id/ly_start_date"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/reservar"
        android:textColor="@color/colorWhite"
        android:background="@drawable/round_corner_button"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>